docs/hello-kubernetes/section02/snippets/ingress-service-demo-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo01
  name: demo01
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo01
  template:
    metadata:
      labels:
        app: demo01
    spec:
      containers:
      - image: cloudacode/hello-go-app:v1.0.0
        name: hello-go-app-v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo01
  name: demo01
  namespace: demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo01
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo01
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo01
            port:
              number: 80
